<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#efefef">

    <soup.neumorphism.NeumorphTextView
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chon_so_la"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn1"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la1"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn2"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la2"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn3"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la3"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn4"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la4"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn5"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la5"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn6"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la6"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btn7"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="75dp"
            android:layout_marginLeft="28dp"
            android:text="@string/la7"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
    </LinearLayout>
</LinearLayout>