<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#efefef">

    <soup.neumorphism.NeumorphTextView
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chon_chu_de"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnSucKhoe"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            android:text="@string/chu_de1"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnTaiChinh"
            android:text="@string/chu_de2"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            android:textStyle="bold"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnTinhYeu"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            android:text="@string/chu_de3"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnCongViec"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            android:text="@string/chu_de4"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnTinhThan"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            android:text="@string/chu_de5"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"
            />
    </LinearLayout>


</LinearLayout>