<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#efefef">

    <soup.neumorphism.NeumorphTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Neumorph.TextView"
        android:text="Tarot&amp;Oracle"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textSize="60dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnBoiHangNgay"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            android:text="@string/boi_hang_ngay"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnBoBai"

            android:text="@string/bo_bai"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            android:textStyle="bold"

            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"

            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnHuongDanTraiBai"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"

            android:text="@string/huong_dan_trai_bai"

            android:textAlignment="center"
            android:textStyle="bold"

            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"

            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnAboutUs"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"

            android:text="@string/about_us"

            android:textAlignment="center"
            android:textStyle="bold"

            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"
            />


    </LinearLayout>

</LinearLayout>