<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#efefef">

    <soup.neumorphism.NeumorphTextView
        style="@style/Widget.Neumorph.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-125dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/chon_bo_bai"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btnRiderWaite"
            android:onClick="goToRider"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            android:text="@string/rider_waite"
            android:textAlignment="center"
            android:textStyle="bold"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            />

        <soup.neumorphism.NeumorphButton

            android:id="@+id/btnRomanceAngelOracle"
            android:text="@string/roman_angel_oracle"
            app:neumorph_backgroundColor="@color/design_default_color_on_primary"
            android:textStyle="bold"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginLeft="28dp"
            style="@style/Widget.Neumorph.Button"
            />

    </LinearLayout>
</LinearLayout>